transform the variables into their file

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,19 @@
-@import url(base/base);
+@import "base/_animation.scss";
+@import "base/base";
+@import "base/typogeraphy";
+@import "base/utilitize";
+@import "abstracts/variables";
+@import "abstracts/function";
+@import "abstracts/mixin";
+@import "pages/home";
 
-// COLORS:
-
+// ////////////////////////////////////////////////////////////////
 $primaryColor: #55c57a;
 $primaryColor-light: #7ed56f;
 $primaryColor-dark: #28b485;
 $grayColor-dark: #777;
 $whiteColor: #fff;
-$blackColor: #000; // // // // // // // // // // // // // // // // // //
-// ////////////////////////////////////////////////////////////////
+$blackColor: #000;
 html {
   font-size: 62.5%;
 }
