h2 styles and the mixin of margin bottom added

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import "base/_animation.scss";
+@import "base/animation";
 @import "base/base";
 @import "base/typogeraphy";
 @import "base/utilitize";
@@ -6,168 +6,5 @@
 @import "abstracts/function";
 @import "abstracts/mixin";
 @import "pages/home";
-
-// ////////////////////////////////////////////////////////////////
-$primaryColor: #55c57a;
-$primaryColor-light: #7ed56f;
-$primaryColor-dark: #28b485;
-$grayColor-dark: #777;
-$whiteColor: #fff;
-$blackColor: #000;
-html {
-  font-size: 62.5%;
-}
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: $grayColor-dark;
-  padding: 3rem;
-  box-sizing: border-box;
-}
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba($primaryColor-light, 0.808),
-      rgba($primaryColor-dark, 0.812)
-    ),
-    url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
-  &__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-  }
-  &__logo {
-    height: 3.5rem;
-  }
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    text-align: center;
-    transform: translate(-50%, -50%);
-  }
-}
-
-.heading-primary {
-  color: $whiteColor;
-  margin: 0 auto;
-  backface-visibility: hidden;
-  margin-bottom: 6rem;
-  &--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: MoveInLeft 2s;
-    animation-timing-function: ease-out;
-  }
-  &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.74rem;
-    animation: MoveInRight 2s;
-    animation-timing-function: ease-out;
-  }
-}
-
-/* ANIMATION */
-@keyframes MoveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-  80% {
-    transform: translateX(1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes MoveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-  80% {
-    transform: translateX(-1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes MoveInbottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-.btn {
-  &:link,
-  &:visited {
-    display: inline-block;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1.6rem;
-    border-radius: 10rem;
-    padding: 1.5rem 4rem;
-    transition: all 300ms;
-    position: relative;
-  }
-  &--animated {
-    animation: MoveInbottom 2s 0.75s;
-    animation-fill-mode: backwards;
-  }
-  &:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba($blackColor, 0.21);
-    &::after {
-      transform: scale(1.4, 1.6);
-      opacity: 0;
-    }
-  }
-  &:active {
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba($blackColor, 0.31);
-  }
-  &--white {
-    color: $grayColor-dark;
-    background-color: $whiteColor;
-    &::after {
-      background-color: $whiteColor;
-    }
-  }
-  &::after {
-    content: " ";
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border-radius: 10rem;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-}
+@import "components/buttons";
+@import "layout/header";
