--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $primaryColor: #55c57a;
 $primaryColor-light: #7ed56f;
 $primaryColor-dark: #28b485;
 $grayColor-dark: #777;
+$grayColor-ligth-1: #f7f7f7;
 $whiteColor: #fff;
 $blackColor: #000;
 /////
