--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,19 @@ body {
   text-shadow: 5rem 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+}
+.paragraph:not(:last-child) {
+  margin-bottom: 1.2rem;
+}
+
 .centerText {
   text-align: center;
 }
@@ -109,6 +122,18 @@ body {
 }
 .section-about .heading-secondary {
   margin-bottom: 8rem;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.about-content {
+  max-width: 114rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 6.4rem;
 }
 
 .btn:link, .btn:visited {
@@ -157,6 +182,26 @@ body {
   transition: all 0.4s;
 }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 0.3rem;
+  transition: all 300ms;
+}
+.btn-text:hover {
+  color: #fff;
+  background-color: #55c57a;
+  box-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.21);
+  transform: translateY(-2px);
+}
+.btn-text:active {
+  box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.21);
+  transform: translateY(0px);
+}
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.808), rgba(40, 180, 133, 0.812)), url(../img/hero.jpg);
@@ -179,6 +224,39 @@ body {
   left: 50%;
   text-align: center;
   transform: translate(-50%, -50%);
+}
+
+.image-box {
+  position: relative;
+}
+.image-box__photos {
+  width: 55%;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+  position: absolute;
+  transition: all 300ms;
+  outline-offset: 1.5rem;
+}
+.image-box__photos--p1 {
+  left: 0;
+  top: -2rem;
+}
+.image-box__photos--p2 {
+  right: 0;
+  top: 2rem;
+}
+.image-box__photos--p3 {
+  right: 15rem;
+  top: 35%;
+}
+.image-box__photos:hover {
+  transform: scale(1.1) translateY(-1rem);
+  z-index: 9999;
+  box-shadow: 1rem 4rem 4rem rgba(0, 0, 0, 0.5);
+  outline: 1.5rem solid #55c57a;
+}
+.image-box:hover .image-box__photos:not(:hover) {
+  transform: scale(0.95);
 }
 
 /*# sourceMappingURL=style.css.map */
