--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,10 +1,11 @@
+@import "../abstracts/variables";
 .btn {
   &:link,
   &:visited {
     display: inline-block;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: $defualtFontSize;
     border-radius: 10rem;
     padding: 1.5rem 4rem;
     transition: all 300ms;
@@ -44,5 +45,28 @@
     left: 0;
     z-index: -1;
     transition: all 0.4s;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $defualtFontSize;
+    color: $primaryColor;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $primaryColor;
+    padding: 0.3rem;
+    transition: all 300ms;
+  }
+  &:hover {
+    color: $whiteColor;
+    background-color: $primaryColor;
+    box-shadow: 0.5rem 1rem 2rem rgba($blackColor, 0.21);
+    transform: translateY(-2px);
+  }
+  &:active {
+    box-shadow: 0.5rem 0.5rem 2rem rgba($blackColor, 0.21);
+    transform: translateY(0px);
   }
 }
